--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,40 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/api/javax.ws.rs-api-2.1.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/aopalliance-repackaged-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/cdi-api-1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/el-api-2.2.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/hk2-api-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/hk2-locator-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/hk2-utils-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/javassist-3.22.0-CR2.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/javax.inject-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/javax.json.bind-api-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/javax.json-1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/javax.json-api-1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/jaxb-api-2.2.7.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/jsr250-api-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/org.osgi.core-4.2.0.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/persistence-api-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/ext/yasson-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/lib/jersey-client.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/lib/jersey-common.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/lib/jersey-container-servlet.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/lib/jersey-container-servlet-core.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/lib/jersey-hk2.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/lib/jersey-media-jaxb.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/lib/jersey-media-json-binding.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/lib/jersey-media-sse.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jaxrs-ri/lib/jersey-server.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/jersey-container-jdk-http-2.27.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sebastian/Downloads/mysql-connector-java-5.1.46/mysql-connector-java-5.1.46.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
